Update project section title from "My Projects" to "Key Projects"

--- a/index.html
+++ b/index.html
@@ -704,7 +704,7 @@
     <section id="projects" class="py-16 bg-gray-100">
         <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-12 scroll-hidden">
-                <h2 class="text-3xl font-bold mb-4">My Projects</h2>
+                <h2 class="text-3xl font-bold mb-4">Key Projects</h2>
                 <div class="w-20 h-1 bg-blue-600 mx-auto"></div>
                 <p class="text-gray-600 max-w-2xl mx-auto mt-4">Selected company projects showcasing my skills and experience</p>
             </div>
